[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[dependency-groups]
dev = [
    "paper-qa[dev]",
]

[project]
authors = [
    {email = "hello@futurehouse.org", name = "FutureHouse technical staff"},
]
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
]
dependencies = [
    "PyMuPDF>=1.24.12",  # For pymupdf.set_messages addition
    "aiohttp>=3.10.6",  # TODO: remove in favor of httpx, pin for aiohttp.ClientConnectionResetError
    "anyio",
    "fhaviary[llm]>=0.18.2",  # For FunctionInfo.parameters.get_properties()
    "fhlmi>=0.25.4",  # For LLM reasoning
    "html2text",  # TODO: evaluate moving to an opt-in dependency
    "httpx",
    "numpy",
    "pybtex",
    "pydantic-settings",
    "pydantic~=2.0,>=2.10.1",  # Pin 2.10 for typing breaks
    "rich",
    "setuptools",  # TODO: remove after release of https://bitbucket.org/pybtex-devs/pybtex/pull-requests/46/replace-pkg_resources-with-importlib
    "tantivy",
    "tenacity",
    "tiktoken>=0.4.0",
]
description = "LLM Chain for answering questions from docs"
dynamic = ["version"]
keywords = ["question answering"]
license = {file = "LICENSE"}
maintainers = [
    {email = "jamesbraza@gmail.com", name = "James Braza"},
    {email = "michael.skarlinski@gmail.com", name = "Michael Skarlinski"},
    {email = "white.d.andrew@gmail.com", name = "Andrew White"},
]
name = "paper-qa"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ipython>=8",  # Pin to keep recent
    "mypy>=1.8",  # Pin for mutable-override
    "paper-qa[ldp,typing,zotero,local,qdrant]",
    "pre-commit>=3.4",  # Pin to keep recent
    "pydantic~=2.0",
    "pylint-pydantic",
    "pytest-asyncio",
    "pytest-recording",
    "pytest-rerunfailures",
    "pytest-subtests",
    "pytest-sugar",
    "pytest-timer[colorama]",
    "pytest-xdist",
    "pytest>=8",  # Pin to keep recent
    "python-dotenv",
    "refurb>=2",  # Pin to keep recent
    "typeguard",
    "vcrpy>=6",  # Pin for https://github.com/kevin1024/vcrpy/issues/884
]
ldp = [
    "ldp>=0.25.0",  # For new LLM client interface
]
local = [
    "sentence-transformers",
]
openreview = [
    "openreview-py",
]
qdrant = [
    "qdrant-client",
]
typing = [
    "types-PyYAML",
    "types-setuptools",
]
zotero = [
    "pyzotero",
]

[project.scripts]
pqa = "paperqa.agents:main"

[project.urls]
issues = "https://github.com/Future-House/paper-qa/issues"
repository = "https://github.com/Future-House/paper-qa"

[tool.black]
preview = true

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words-list = "aadd,astroid,ser,ECT"
skip = "docs/2024-10-16_litqa2-splits.json5"

[tool.mypy]
# Type-checks the interior of functions without type annotations.
check_untyped_defs = true
# Allows enabling one or multiple error codes globally. Note: This option will
# override disabled error codes from the disable_error_code option.
enable_error_code = [
    "ignore-without-code",
    "mutable-override",
    "redundant-cast",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unimported-reveal",
    "unreachable",
    "unused-awaitable",
    "unused-ignore",
]
# Shows a short summary line after error messages.
error_summary = false
# A regular expression that matches file names, directory names and paths which mypy
# should ignore while recursively discovering files to check. Use forward slashes (/) as
# directory separators on all platforms.
exclude = [
    "^\\.?venv",  # SEE: https://regex101.com/r/0rp5Br/1
]
# Specifies the OS platform for the target program, for example darwin or win32
# (meaning OS X or Windows, respectively). The default is the current platform
# as revealed by Python’s sys.platform variable.
platform = "linux"
# Comma-separated list of mypy plugins.
plugins = ["pydantic.mypy"]
# Use visually nicer output in error messages: use soft word wrap, show source
# code snippets, and show error location markers.
pretty = true
# Shows column numbers in error messages.
show_column_numbers = true
# Shows error codes in error messages.
# SEE: https://mypy.readthedocs.io/en/stable/error_codes.html#error-codes
show_error_codes = true
# Prefixes each error with the relevant context.
show_error_context = true
# Warns about casting an expression to its inferred type.
warn_redundant_casts = true
# Shows a warning when encountering any code inferred to be unreachable or
# redundant after performing type analysis.
warn_unreachable = true
# Warns about per-module sections in the config file that do not match any
# files processed when invoking mypy.
warn_unused_configs = true
# Warns about unneeded `# type: ignore` comments.
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Suppresses error messages about imports that cannot be resolved.
ignore_missing_imports = true
# Per-module configuration options
module = [
    "openreview",
    "pybtex.*",  # SEE: https://bitbucket.org/pybtex-devs/pybtex/issues/141/type-annotations
    "pymupdf",  # SEE: https://github.com/pymupdf/PyMuPDF/issues/2883
    "pyzotero",  # SEE: https://github.com/urschrei/pyzotero/issues/110
]

[tool.pylint]

[tool.pylint.design]
# Maximum number of attributes for a class (see R0902).
max-attributes = 12

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 88  # Match ruff line-length

[tool.pylint.main]
# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use, and will cap the count on Windows to
# avoid hangs.
jobs = 0
# List of plugins (as comma separated values of python module names) to load,
# usually to register additional checkers.
load-plugins = [
    "pylint_pydantic",
]

[tool.pylint.messages_control]
# Disable the message, report, category or checker with the given id(s).
disable = [
    "arguments-differ",  # Ops intentionally differ arguments
    "attribute-defined-outside-init",  # Disagrees with reset pattern
    "bare-except",  # Rely on ruff E722 for this
    "broad-exception-caught",  # Don't care to enforce this
    "broad-exception-raised",  # Rely on ruff TRY002 for this
    "cyclic-import",  # Let Python blow up
    "dangerous-default-value",  # Rely on ruff W0102 for this
    "empty-docstring",  # Let pep257 take care of docstrings
    "expression-not-assigned",  # Rely on mypy func-returns-value for this
    "fixme",  # codetags are useful
    "function-redefined",  # Rely on mypy no-redef for this
    "import-outside-toplevel",  # Rely on ruff PLC0415 for this
    "invalid-name",  # Don't care to enforce this
    "keyword-arg-before-vararg",  # Rely on ruff B026 for this
    "line-too-long",  # Rely on ruff E501 for this
    "logging-fstring-interpolation",  # f-strings are convenient
    "logging-too-many-args",  # Rely on ruff PLE1205 for this
    "missing-docstring",  # Let docformatter and ruff take care of docstrings
    "missing-final-newline",  # Rely on ruff W292 for this
    "no-else-return",  # Rely on ruff RET506 for this
    "no-member",  # Buggy, SEE: https://github.com/pylint-dev/pylint/issues/8138
    "no-value-for-parameter",  # Rely on mypy call-arg for this
    "not-callable",  # Don't care to enforce this
    "protected-access",  # Don't care to enforce this
    "raise-missing-from",  # Rely on ruff B904 for this
    "redefined-builtin",  # Rely on ruff A002 for this
    "super-init-not-called",  # Don't care to enforce this
    "too-few-public-methods",  # Don't care to enforce this
    "too-many-ancestors",  # Don't care to enforce this
    "too-many-arguments",  # Don't care to enforce this
    "too-many-branches",  # Rely on ruff PLR0912 for this
    "too-many-instance-attributes",  # Don't care to enforce this
    "too-many-lines",  # Don't care to enforce this
    "too-many-locals",  # Rely on ruff PLR0914 for this
    "too-many-positional-arguments",  # Don't care to enforce this
    "too-many-public-methods",  # Rely on ruff PLR0904 for this
    "too-many-return-statements",  # Rely on ruff PLR0911 for this
    "too-many-statements",  # Rely on ruff PLR0915 for this
    "undefined-loop-variable",  # Don't care to enforce this
    "ungrouped-imports",  # Rely on ruff I001 for this
    "unidiomatic-typecheck",  # Rely on ruff E721 for this
    "unreachable",  # Rely on mypy unreachable for this
    "unspecified-encoding",  # Rely on ruff PLW1514 for this
    "unspecified-encoding",  # Don't care to enforce this
    "unsubscriptable-object",  # Buggy, SEE: https://github.com/pylint-dev/pylint/issues/3637
    "unsupported-membership-test",  # Buggy, SEE: https://github.com/pylint-dev/pylint/issues/3045
    "unused-argument",  # Rely on ruff ARG002 for this
    "unused-import",  # Rely on ruff F401 for this
    "unused-variable",  # Rely on ruff F841 for this
    "wrong-import-order",  # Rely on ruff I001 for this
    "wrong-import-position",  # Rely on ruff E402 for this
]
# Enable the message, report, category or checker with the given id(s).
enable = [
    "useless-suppression",  # Print unused `pylint: disable` comments
]

[tool.pylint.reports]
# Set true to activate the evaluation score.
score = false

[tool.pylint.similarities]
# Minimum lines number of a similarity.
min-similarity-lines = 12

[tool.pytest.ini_options]
# Add the specified OPTS to the set of command line arguments as if they had been
# specified by the user.
addopts = "--typeguard-packages=paperqa"
# set how loops are scoped to avoid https://github.com/BerriAI/litellm/issues/5854
asyncio_default_fixture_loop_scope = "session"
# Sets a list of filters and actions that should be taken for matched warnings.
# By default all warnings emitted during the test session will be displayed in
# a summary at the end of the test session.
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated, use ConfigDict instead",  # SEE: https://github.com/BerriAI/litellm/issues/5648
    "ignore:The `dict` method is deprecated; use `model_dump` instead",  # SEE: https://github.com/BerriAI/litellm/issues/5987
    "ignore:Use 'content=<...>' to upload raw bytes/text content:DeprecationWarning",  # SEE: https://github.com/BerriAI/litellm/issues/5986
    "ignore:builtin type (SwigPyPacked|SwigPyObject|swigvarlink) has no __module__:DeprecationWarning:importlib._bootstrap",  # SEE: https://github.com/pymupdf/PyMuPDF/issues/3931 --> https://github.com/swig/swig/issues/2881#issuecomment-2332652634
    'ignore:open_text is deprecated. Use files\(\) instead:DeprecationWarning',  # SEE: https://github.com/BerriAI/litellm/issues/5647
    'ignore:pkg_resources is deprecated as an API.:DeprecationWarning:pybtex',  # SEE: https://bitbucket.org/pybtex-devs/pybtex/issues/169/replace-pkg_resources-with
]
# List of directories that should be searched for tests when no specific directories,
# files or test ids are given in the command line when executing pytest from the rootdir
# directory. File system paths may use shell-style wildcards, including the recursive **
# pattern.
testpaths = ["tests"]

[tool.refurb]
enable_all = true
ignore = [
    "FURB101",  # Rely on ruff FURB101 for this
    "FURB103",  # Rely on ruff FURB103 for this
    "FURB141",  # Rely on ruff PTH110 for this
    "FURB144",  # Rely on ruff PTH107 for this
    "FURB146",  # Rely on ruff PTH113 for this
    "FURB147",  # Rely on ruff PTH118 for this
    "FURB150",  # Rely on ruff PTH102 for this
    "FURB155",  # Rely on ruff PTH202 for this
]

[tool.ruff]
# Line length to use when enforcing long-lines violations (like `E501`).
line-length = 97  # ceil(1.1 * 88) makes `E501` equivalent to `B950`
# Enable application of unsafe fixes.
unsafe-fixes = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Enable preview style formatting.
preview = true

[tool.ruff.lint]
explicit-preview-rules = true
extend-select = [
    "AIR301",
    "AIR302",
    "AIR303",
    "ASYNC116",
    "B901",
    "B903",
    "B909",
    "B911",
    "C420",
    "CPY001",
    "DOC201",
    "DOC202",
    "DOC402",
    "DOC403",
    "DOC501",
    "DOC502",
    "DTZ901",
    "E111",
    "E112",
    "E113",
    "E114",
    "E115",
    "E116",
    "E117",
    "E201",
    "E202",
    "E203",
    "E204",
    "E211",
    "E221",
    "E222",
    "E223",
    "E224",
    "E225",
    "E226",
    "E227",
    "E228",
    "E231",
    "E241",
    "E242",
    "E251",
    "E252",
    "E261",
    "E262",
    "E265",
    "E266",
    "E271",
    "E272",
    "E273",
    "E274",
    "E275",
    "E301",
    "E302",
    "E303",
    "E304",
    "E305",
    "E306",
    "E502",
    "FAST003",
    "FURB101",
    "FURB103",
    "FURB110",
    "FURB113",
    "FURB116",
    "FURB118",
    "FURB122",
    "FURB131",
    "FURB132",
    "FURB140",
    "FURB142",
    "FURB145",
    "FURB148",
    "FURB152",
    "FURB154",
    "FURB156",
    "FURB157",
    "FURB162",
    "FURB164",
    "FURB166",
    "FURB171",
    "FURB180",
    "FURB189",
    "FURB192",
    "LOG004",
    "LOG014",
    "LOG015",
    "PLC0415",
    "PLC1802",
    "PLC1901",
    "PLC2701",
    "PLC2801",
    "PLE0304",
    "PLE1141",
    "PLE4703",
    "PLR0202",
    "PLR0203",
    "PLR0904",
    "PLR0914",
    "PLR0916",
    "PLR0917",
    "PLR1702",
    "PLR1733",
    "PLR6104",
    "PLR6201",
    "PLR6301",
    "PLW0108",
    "PLW0177",
    "PLW0244",
    "PLW1507",
    "PLW1514",
    "PLW3201",
    "PT028",
    "PT029",
    "PT030",
    "PT031",
    "PTH208",
    "PTH210",
    "PYI059",
    "PYI061",
    "RUF027",
    "RUF028",
    "RUF029",
    "RUF031",
    "RUF035",
    "RUF036",
    "RUF037",
    "RUF038",
    "RUF039",
    "RUF040",
    "RUF041",
    "RUF043",
    "RUF045",
    "RUF046",
    "RUF047",
    "RUF048",
    "RUF049",
    "RUF051",
    "RUF052",
    "RUF053",
    "RUF054",
    "RUF055",
    "RUF056",
    "RUF057",
    "RUF058",
    "SIM905",
    "TC006",
    "TC007",
    "TC008",
    "UP042",
    "UP044",
    "UP045",
    "UP046",
    "UP047",
    "UP049",
    "W391",
]
# List of rule codes that are unsupported by Ruff, but should be preserved when
# (e.g.) validating # noqa directives. Useful for retaining # noqa directives
# that cover plugins not yet implemented by Ruff.
external = [
    "FURB",  # refurb
]
ignore = [
    "A005",  # Overly pedantic
    "ANN",  # Don't care to enforce typing
    "BLE001",  # Don't care to enforce blind exception catching
    "C901",  # we can be complex
    "COM812",  # Trailing comma with black leads to wasting lines
    "CPY001",  # Don't care to require copyright notices in every file
    "D100",  # D100, D101, D102, D103, D104, D105, D106, D107: don't always need docstrings
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",  # Keep docstring next to the class definition (covered by D211)
    "D212",  # Summary should be on second line (opposite of D213)
    "D402",  # It's nice to reuse the method name
    "D406",  # Google style requires ":" at end
    "D407",  # We aren't using numpy style
    "D413",  # Blank line after last section. -> No blank line
    "DOC201",  # Don't care to require Returns in docstrings
    "DOC402",  # Don't care to require Yields in docstrings
    "DOC501",  # Don't care to require Raises in docstrings
    "DTZ",  # Don't care to have timezone safety
    "EM",  # Overly pedantic
    "ERA001",  # Don't care to prevent commented code
    "FBT001",  # FBT001, FBT002: overly pedantic
    "FBT002",
    "FIX",  # Don't care to prevent TODO, FIXME, etc.
    "FLY002",  # Can be less readable
    "FURB101",  # FURB101, FURB103: don't care to enforce pathlib
    "FURB103",
    "G004",  # f-strings are convenient
    "INP001",  # Can use namespace packages
    "ISC001",  # For ruff format compatibility
    "N803",  # Want to use 'N', or 'L',
    "N806",  # Want to use 'N', or 'L',
    "PLC0415",  # Lazy imports for extras can be used
    "PLR0904",  # Don't care to enforce this
    "PLR0913",
    "PLR0914",  # Don't care to enforce this
    "PLR0915",  # we can write lots of code
    "PLR0917",  # Don't care to enforce this
    "PLR6301",  # Don't care to enforce this
    "PLW1514",  # Don't care to enforce this
    "PLW2901",  # Allow modifying loop variables
    "PTH",  # Overly pedantic
    "RUF027",  # Prompt templates may not be f-strings
    "RUF052",  # Previous code uses leading underscore to indicate throwaway
    "S311",  # Ok to use python random
    "SLF001",  # Overly pedantic
    "T201",  # Overly pedantic
    "TC001",  # TC001, TC002, TC003: don't care to enforce type checking blocks
    "TC002",
    "TC003",
    "TD002",  # Don't care for TODO author
    "TD003",  # Don't care for TODO links
    "TRY003",  # Overly pedantic
]
preview = true
select = ["ALL"]
unfixable = [
    "B007",  # While debugging, unused loop variables can be useful
    "B905",  # Default fix is zip(strict=False), but that can hide bugs
    "ERA001",  # While debugging, temporarily commenting code can be useful
    "F401",  # While debugging, unused imports can be useful
    "F841",  # While debugging, unused locals can be useful
    "TC004",  # While debugging, it can be nice to keep TYPE_CHECKING in-tact
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = [
    "N802",  # Tests function names can match class names
    "PLR2004",  # Tests can have magic values
    "PLR6301",  # Test classes can ignore self
    "S101",  # Tests can have assertions
    "S301",  # can test pickle
    "S310",
]

[tool.ruff.lint.pycodestyle]
# The maximum line length to allow for line-length violations within
# documentation (W505), including standalone comments.
max-doc-length = 120
# The maximum line length to allow for line-too-long violations. By default,
# this is set to the value of the line-length option.
max-line-length = 120

[tool.ruff.lint.pydocstyle]
# Whether to use Google-style or NumPy-style conventions or the PEP257
# defaults when analyzing docstring sections.
convention = "google"

[tool.setuptools.package-data]
paperqa = ["configs/**json"]

[tool.setuptools.packages.find]
include = ["paperqa*"]

[tool.setuptools_scm]
version_file = "paperqa/version.py"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
